# gcs-rs

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  journal.md  main.rs  ops.rs  post.zsh
src/docs/: decorator.md  journal.md  layers.md  map-vs-and_then-finally.md  mime.md  readerstream-vs-framedread.md  stream.md
src/ops/: gcs_bucket.rs  types.rs
src/tests/: get.zsh  parse.zsh
