[package]
name = "gcs-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = "4.5.26"
gcp_auth = "0.12.3"
http = "1.2.0"
reqwest = { version = "0.12.12", features = ["stream"] }
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full", "io-util"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
